--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>飞行棋小游戏</title>
   <style>
     body { font-family: sans-serif; text-align: center; background: #f0f8ff; }
