--- a/index.html
+++ b/index.html
@@ -151,23 +151,24 @@
     );
 
   const events = {
-	3: "不触发",
+	3: "亲对方10秒",
     4: "脚下踩空，后退 3 格...",
     5: "幸运星加持，再掷一次骰子！",
-	6: "不触发",
+	6: "给对方一个深情拥抱",
     7: "打个盹，暂停一回合",
     8: "幸运满格，直接到终点！",
     9: "路遇善人，前进 4 格！",
     10: "幸运女神降临，前进 2 格！",
-	11: "不触发",
-    12: "不触发",
+	11: "许个愿望",
+    12: "真心话小游戏",
     13: "和好友拥抱，交换位置",
-	14: "不触发",
-	16: "不触发",
-    19: "不触发",
+	14: "亲对方10秒",
+	16: "学狗叫3次",
+    19: "说我爱你",
+	25: "给对方一个深情拥抱",
     28: "双倍幸运！前进 6 格！",
     32: "遇到岔路，随机跳到新位置！",
-    33: "不触发",
+    33: "对视30秒不许笑",
     34: "碰到对手，被打飞回起点！",
     36: "掉进陷阱，后退 5 格！",
     39: "停电了，跳过下一回合"
